(fix) makes spacing in mini-heading-side consistent with mini-heading-top

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -91,7 +91,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-right: 100px;
   margin-top: 20px;
   min-width: 200px;
-  padding: 10px 10px 0px 10px;
+  padding: 15px 10px 0px 10px;
 }
 
 .mini-heading-box-top {
